# randopass

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  command_line.py  pyproject.toml  randopass-runner.py  randopass.py  setup.py
randopass/: __init__.py  __main__.py  randopass.py
randopass/dictionaries/: afrikaans.py  english.py  english_simple.py
